--- a/Credit_Card_Fraud_Detection.ipynb
+++ b/Credit_Card_Fraud_Detection.ipynb
@@ -57,7 +57,7 @@
         "import imblearn\n",
         "from collections import Counter"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,23 +77,23 @@
       "source": [
         "credit_data=pd.read_csv('/content/creditcard.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AEUZv5PTsKrq",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
         },
-        "id": "AEUZv5PTsKrq",
-        "outputId": "47718d8c-5825-4747-87ed-38c6449e1978"
+        "outputId": "2c0d8043-65d1-4153-d6dc-b29a793e7991"
       },
       "source": [
         "credit_data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,16 +353,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "JSCJrSMisRn2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JSCJrSMisRn2",
-        "outputId": "23f82f26-1727-4ece-8f35-64263bfe507d"
+        "outputId": "8b880a90-1254-4814-992e-b450068d6819"
       },
       "source": [
         "credit_data.info()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,16 +413,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3zK4JoM0ui0k",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3zK4JoM0ui0k",
-        "outputId": "04f0ce87-01aa-454e-f572-bee55b0f89a7"
+        "outputId": "343ddec5-3fe7-41e7-bacd-d4c061b9cec8"
       },
       "source": [
         "credit_data.isnull().sum()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,16 +470,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "958G-zLmvV38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "958G-zLmvV38",
-        "outputId": "c754ef9b-57d6-439e-f8dc-44860f72e22a"
+        "outputId": "e8a3d5f8-1cf6-4bd5-b113-7b37a6c66458"
       },
       "source": [
         "credit_data['Class'].value_counts()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,10 +501,10 @@
         "id": "QnS0SlwDwes_"
       },
       "source": [
-        "Fraud_Transaction=credit_data[credit_data.Class==1]\n",
-        "Non_Fraud_Transaction=credit_data[credit_data.Class==0]"
+        "  Fraud_Transaction=credit_data[credit_data.Class==1]\n",
+        "  Non_Fraud_Transaction=credit_data[credit_data.Class==0]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,17 +519,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Z9YR4JCWwp9Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Z9YR4JCWwp9Y",
-        "outputId": "f1c39312-c24b-434f-bbc6-6f3a23868209"
+        "outputId": "4b6e0868-e2fc-40ed-ec7c-159bd2d33739"
       },
       "source": [
         "print (\"Number of Fraud Transactions in the Dataset is:\",Fraud_Transaction.shape[0])\n",
         "print (\"Number of Non Fraud Transactions in the Dataset is:\",Non_Fraud_Transaction.shape[0])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,17 +544,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "r55xq_vFxJZ9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
         },
-        "id": "r55xq_vFxJZ9",
-        "outputId": "3da942c3-76eb-426f-d4ee-2bc7c8732763"
+        "outputId": "b5a98217-d62b-485f-b51b-6783c2b30a9e"
       },
       "source": [
         "Fraud_Transaction.describe()\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,17 +910,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IlnVjR4E_Ud_",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
         },
-        "id": "IlnVjR4E_Ud_",
-        "outputId": "f583af03-de98-4295-ad8f-d2f8e58e6f55"
+        "outputId": "4e9b75e7-f475-450f-8d6e-a336f6a025a3"
       },
       "source": [
         "Non_Fraud_Transaction.describe()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1274,6 +1274,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lnc50Ll9GXYE"
+      },
+      "source": [
+        "**Scaling the Amount Feature to be in range between (-1,1)**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j09zIDEdAMdU"
@@ -1282,22 +1291,22 @@
         "std_scaler=StandardScaler()\n",
         "credit_data['Amount'] = std_scaler.fit_transform(credit_data['Amount'].values.reshape(-1,1))\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "vELirgMAAhEc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "vELirgMAAhEc",
-        "outputId": "9a9307f8-459a-4a56-bb7f-5ea87ee6e857"
+        "outputId": "d6afa7d7-baef-48ec-ad2d-7b7ddba6cb3e"
       },
       "source": [
         "credit_data['Amount']"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1325,16 +1334,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AIWDIh1tP7Y_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AIWDIh1tP7Y_",
-        "outputId": "0a98d885-4f29-494f-eeba-f6935458f1a4"
+        "outputId": "ba52f7fe-f79c-4252-e50f-360f74187a92"
       },
       "source": [
         "credit_data.Amount.values"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1352,17 +1361,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Dsmj8J4iUMmZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
         },
-        "id": "Dsmj8J4iUMmZ",
-        "outputId": "5079d9ac-9576-4ab8-c257-b3d21e6d55fe"
+        "outputId": "05b52359-ab95-476b-a6a3-10afb5e56a7b"
       },
       "source": [
         "credit_data.head()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1611,15 +1620,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L5bxyBKUtu9i"
-      },
-      "source": [
-        "SMOTE and TOMEK for Data"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "5teWaalpUZEN"
@@ -1628,22 +1628,22 @@
         "X = credit_data.drop(columns = ['Class','Time'])\n",
         "y = credit_data['Class']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "uLPgiAK-wRYM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uLPgiAK-wRYM",
-        "outputId": "3a10ee0a-3a5c-4e1e-8ea3-89e529424e8b"
+        "outputId": "80dd70e8-43c5-479c-a3cc-a52947527912"
       },
       "source": [
         "X.shape"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,16 +1660,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XBx-2cVdySvw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XBx-2cVdySvw",
-        "outputId": "2c57f592-38ac-42f9-8d46-6a39db1a5dd4"
+        "outputId": "28ae2031-2997-414c-d441-c1e07bcd2982"
       },
       "source": [
         "y.shape\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1684,6 +1684,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lSpD_t1n-e7Q"
+      },
+      "source": [
+        "**Splitting the data to train and test the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3vf6O1KgF8j0"
@@ -1691,22 +1700,22 @@
       "source": [
         "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.3,stratify=y,random_state=2)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "q6w8zyyVGXF_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "q6w8zyyVGXF_",
-        "outputId": "5bb7b009-83a4-4741-c070-94673cf45479"
+        "outputId": "6d0a925d-bcc3-47e2-d9b7-edd655b00c51"
       },
       "source": [
         "print(X.shape,X_train.shape,X_test.shape)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1720,16 +1729,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Jo8rcJxBuh69",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Jo8rcJxBuh69",
-        "outputId": "590783f8-1f5a-4d2d-d185-1d28230e7b37"
+        "outputId": "a59ba6c3-e14d-4c5e-a720-cf00ae7a878e"
       },
       "source": [
         "y.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1749,6 +1758,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sQRlQm2G-5B_"
+      },
+      "source": [
+        "**Smote and Tomek Technique for Resampling the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Ww27gS-RHXHC"
@@ -1759,22 +1777,22 @@
         "#smotek.fit(X_train,y_train)\n",
         "X_train, y_train = smotek.fit_resample(X_train, y_train)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "63AvXtDswgrW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "63AvXtDswgrW",
-        "outputId": "3c5a211d-9b60-4b1f-8930-6b4602f52334"
+        "outputId": "d0c7e84b-b327-467a-dd6d-abeab34a74a8"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1791,16 +1809,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KqtC_PFqFacT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "KqtC_PFqFacT",
-        "outputId": "ed297677-826e-4d2e-ffb0-2832ddd8e719"
+        "outputId": "aaa2ec3e-8a35-4b03-c9b5-d03beb4b2495"
       },
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1826,7 +1844,7 @@
         "tree_model.fit(X_train, y_train)\n",
         "tree_yhat = tree_model.predict(X_test)\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1841,7 +1859,7 @@
         "knn.fit(X_train, y_train)\n",
         "knn_yhat = knn.predict(X_test)\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1856,7 +1874,7 @@
         "xgb.fit(X_train, y_train)\n",
         "xgb_yhat = xgb.predict(X_test)\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1875,7 +1893,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46f8b8a3-c506-4e6f-8574-1d1be84eb47d"
+        "outputId": "39e6b302-4206-4440-d2b2-3cf9e8ac79b6"
       },
       "source": [
         "print('F1 score of the Decision Tree model is {}'.format(f1_score(y_test, tree_yhat)))\n",
@@ -1883,7 +1901,7 @@
         "\n",
         "print('F1 score of the XGBoost model is {}'.format(f1_score(y_test, xgb_yhat)))\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1934,7 +1952,7 @@
         "    plt.ylabel('True label')\n",
         "    plt.xlabel('Predicted label')\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1948,7 +1966,7 @@
         "knn_matrix = confusion_matrix(y_test, knn_yhat, labels = [0, 1]) # K-Nearest Neighbors\n",
         "xgb_matrix = confusion_matrix(y_test, xgb_yhat, labels = [0, 1]) # XGBoost"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1961,7 +1979,7 @@
         "\n",
         "plt.rcParams['figure.figsize'] = (6, 6)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1972,7 +1990,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "07c1b9c7-4d9c-489c-fa96-a2fb72e7eb79"
+        "outputId": "e906d526-50ea-48e4-980b-5f14438bdc0c"
       },
       "source": [
         "# 1. Decision tree\n",
@@ -1983,7 +2001,7 @@
         "plt.savefig('tree_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2007,7 +2025,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "bf084c21-e339-4d59-8b51-988d4cff6a8b"
+        "outputId": "1d84a99d-006b-4a86-8ca4-388b19401f49"
       },
       "source": [
         "# 2. K-Nearest Neighbors\n",
@@ -2018,7 +2036,7 @@
         "plt.savefig('knn_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2042,7 +2060,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "1177212e-1e54-4706-f9c9-f84ad8f53db5"
+        "outputId": "8ac75ff6-8850-4074-d846-065d3a4b2249"
       },
       "source": [
         "#3 XGBoost\n",
@@ -2053,7 +2071,7 @@
         "plt.savefig('xgb_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2079,17 +2097,6 @@
         "pickle.dump(xgb, open('xgg_model.pkl','wb'))\n",
         "pickle.dump(knn, open('knn_model.pkl','wb'))\n",
         "pickle.dump(tree_model, open('tree_model.pkl','wb'))"
-      ],
-      "execution_count": 35,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BIJwjV5h2mOj"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
