--- a/Credit_Card_Fraud_Detection.ipynb
+++ b/Credit_Card_Fraud_Detection.ipynb
@@ -57,7 +57,7 @@
         "import imblearn\n",
         "from collections import Counter"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "credit_data=pd.read_csv('/content/creditcard.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "source": [
         "credit_data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
       "source": [
         "credit_data.info()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
       "source": [
         "credit_data.isnull().sum()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
       "source": [
         "credit_data['Class'].value_counts()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,7 @@
         "  Fraud_Transaction=credit_data[credit_data.Class==1]\n",
         "  Non_Fraud_Transaction=credit_data[credit_data.Class==0]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +520,7 @@
         "print (\"Number of Fraud Transactions in the Dataset is:\",Fraud_Transaction.shape[0])\n",
         "print (\"Number of Non Fraud Transactions in the Dataset is:\",Non_Fraud_Transaction.shape[0])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +545,7 @@
       "source": [
         "Fraud_Transaction.describe()\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,7 +911,7 @@
       "source": [
         "Non_Fraud_Transaction.describe()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1285,7 @@
       "source": [
         "credit_data.Amount.describe()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1319,7 +1319,7 @@
       "source": [
         "Non_Fraud_Transaction.Amount.describe()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1353,7 @@
       "source": [
         "Fraud_Transaction.Amount.describe()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,9 +1382,9 @@
       },
       "source": [
         "std_scaler=StandardScaler()\n",
-        "credit_data['Amount'] = std_scaler.fit_transform(credit_data['Amount'].values.reshape(-1,1))\n"
+        "credit_data['Amount'] = std_scaler.fit_transform((X_tra)\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1399,7 +1399,7 @@
       "source": [
         "credit_data['Amount']"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,7 +1436,7 @@
       "source": [
         "credit_data.Amount.values"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1464,7 @@
       "source": [
         "credit_data.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1721,7 @@
         "X = credit_data.drop(columns = ['Class','Time'])\n",
         "y = credit_data['Class']"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1736,7 +1736,7 @@
       "source": [
         "X.shape"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
       "source": [
         "y.shape\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1793,7 +1793,7 @@
       "source": [
         "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.3,stratify=y,random_state=2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1808,7 +1808,7 @@
       "source": [
         "print(X.shape,X_train.shape,X_test.shape)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,7 +1831,7 @@
       "source": [
         "y.head()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1860,9 +1860,77 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We have tried multiple combinations for over sampling and under sampling."
+      ],
+      "metadata": {
+        "id": "fdKRBH6U714W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# # Import the SMOTE package\n",
+        "# from imblearn.over_sampling import SMOTE\n",
+        "# # Synthesize minority class datapoints using SMOTE\n",
+        "# sm = SMOTE(random_state=42, sampling_strategy='minority')\n",
+        "# smote_x_train, smote_y_train = sm.fit_resample(X_train, y_train)\n",
+        "# print(smote_x_train.shape, smote_y_train.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xrPc0YAT71md",
+        "outputId": "8ac450e2-d0df-413d-b61f-e74314e410f4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(454902, 29) (454902,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# smote = RandomForestClassifier(n_estimators=1000).fit(smote_x_train, smote_y_train)\n",
+        " \n",
+        "# # Predict on training set\n",
+        "# smote_preds = smote.predict(X_test)\n",
+        "# print('F1 Score: ', f1_score(y_test, smote_preds),'\\n\\n')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RQM82tx2-Cbo",
+        "outputId": "9812e081-5bf4-4332-fb43-e78247dd014d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "F1 Score: , 0.276540987654\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Ww27gS-RHXHC"
+        "id": "Ww27gS-RHXHC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b804fca8-c6ca-4ce9-d7ca-980047384a3b"
       },
       "source": [
         "  #over_and_under_sample =  imblearn.combine.SMOTETomek(sampling_strategy = 1.0, n_jobs = -1, random_state = 2)\n",
@@ -1870,8 +1938,25 @@
         "#smotek.fit(X_train,y_train)\n",
         "X_train, y_train = smotek.fit_resample(X_train, y_train)"
       ],
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(454902, 29) (454902,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After comparing both combinations, we found SMOTETomek is better and using it for further modelling"
+      ],
+      "metadata": {
+        "id": "vG77Bo1R-fDf"
+      }
     },
     {
       "cell_type": "code",
@@ -1885,7 +1970,7 @@
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1911,7 +1996,7 @@
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1937,7 +2022,7 @@
         "tree_model.fit(X_train, y_train)\n",
         "tree_yhat = tree_model.predict(X_test)\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1952,7 +2037,7 @@
         "knn.fit(X_train, y_train)\n",
         "knn_yhat = knn.predict(X_test)\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1967,7 +2052,7 @@
         "xgb.fit(X_train, y_train)\n",
         "xgb_yhat = xgb.predict(X_test)\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1994,7 +2079,7 @@
         "\n",
         "print('F1 score of the XGBoost model is {}'.format(f1_score(y_test, xgb_yhat)))\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2045,7 +2130,7 @@
         "    plt.ylabel('True label')\n",
         "    plt.xlabel('Predicted label')\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2059,7 +2144,7 @@
         "knn_matrix = confusion_matrix(y_test, knn_yhat, labels = [0, 1]) # K-Nearest Neighbors\n",
         "xgb_matrix = confusion_matrix(y_test, xgb_yhat, labels = [0, 1]) # XGBoost"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2072,7 +2157,7 @@
         "\n",
         "plt.rcParams['figure.figsize'] = (6, 6)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2094,7 +2179,7 @@
         "plt.savefig('tree_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2129,7 +2214,7 @@
         "plt.savefig('knn_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2164,7 +2249,7 @@
         "plt.savefig('xgb_cm_plot.png')\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2191,7 +2276,7 @@
         "pickle.dump(knn, open('knn_model.pkl','wb'))\n",
         "pickle.dump(tree_model, open('tree_model.pkl','wb'))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2208,7 +2293,7 @@
         "Fraud_Transaction=credit_data[credit_data.Class==1]\n",
         "Fraud_Transaction.head(20)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2995,7 +3080,7 @@
         "Non_Fraud_Transaction=credit_data[credit_data.Class==0]\n",
         "Non_Fraud_Transaction.head(20)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3781,7 +3866,7 @@
       "source": [
         "X_test"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4224,7 +4309,7 @@
       "source": [
         ""
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     }
   ]
